# cowallet

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  userGuide.md
artifacts/SmartContractWallet/: application.json  approval.teal  contract.json
src/actions/: fundAccount.js  index.js  optInAsset.js
src/algorand/: index.js
src/app/: globals.css  layout.js  loading.js  page.js
src/app/api/create/: route.js
src/app/components/: addTransaction.js  createWallet.js  loadWallet.js  mainMenu.js  navBar.js  providers.js  receiveTransaction.js  sendTransaction.js  transactions.js  truncatedAddress.js  txnsAccordion.js  walletInfo.js
src/app/create/: addOwnerPopup.js  loading.js  page.js
src/app/login/: page.js
src/app/wallet/[id]/: loading.js  page.js
src/asset/: scw.py
src/clients/: index.js
src/useractions/: addOwners.js  createOptInTxn.js  index.js
test/: negative_tests.js  success_tests.js
